[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/game/tutorial/1/village/hardmode.gd" type="Script" id=1]
[ext_resource path="res://assets/game/tutorial/1/village/blood.png" type="Texture" id=2]
[ext_resource path="res://themes/text24.tres" type="Theme" id=3]
[ext_resource path="res://themes/text30.tres" type="Theme" id=4]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 149.0
margin/right = 1920.0
margin/bottom = 368.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 753.0
margin/right = 1920.0
margin/bottom = 806.0
text = "Vous vous préparez à abattre la pelle sur Juliette.
Elle ne pourra plus vous accompagner dans vos aventures."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1042.0
margin/right = 1920.0
margin/bottom = 1079.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="hitButton" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 0.0
margin/right = 958.0
margin/bottom = 37.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Frapper Juliette"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="spareButton" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 962.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 37.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Epargner Juliette"
flat = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/hitButton" to="." method="_on_hitButton_pressed"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/spareButton" to="." method="_on_spareButton_pressed"]


